Fixed bug in ViewVideo - Site was failing to load view video after upload - Questions were showing scrollbar even when not needed.

--- a/front-end/src/pages/ViewVideo/ViewVideo.scss
+++ b/front-end/src/pages/ViewVideo/ViewVideo.scss
@@ -132,7 +132,7 @@
         max-height: 300px;
         width: 100%;
         padding: 0 7px;
-        overflow-y: scroll;
+        overflow-y: auto;
         scrollbar-color: $themeSlateContrastTertiary;
 
         &::-webkit-scrollbar {
